--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     <div class="card contact-form-container">
       <h2>CONTACT US.</h2>
       <p>Feel free to contact us if you need help.</p>
-      <form action="formspree" method="POST">
+      <form action="https://formspree.io/f/mnnvegrn" method="POST" class="row g-3">
 
         <label for="name">Name</label>
         <input type="text" id="name" name="name">
@@ -65,7 +65,7 @@
     <div class="connect">
       <p>Connect with me:</p>
       <div class="social-links">
-        <a href="" target="_blank">
+        <a href="https://github.com/celine237" target="_blank">
           <i class="fab fa-github"></i> GitHub
         </a>
         <a href="mailto:mogahceline@gmail.com">
