--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <!-- <start -->
     <div class="top-bar">
       <div class="social-links">
         <a href="#"><img src="Images\facebook-icon (2).png" alt="Facebook"></a>
