--- a/program.html
+++ b/program.html
@@ -104,7 +104,7 @@
   <div class="speakers-grid">
     <!-- Speaker 1 -->
     <div class="speaker-card">
-      <img src="Images\speaker 1.png" alt="Yochai Benkler" />
+      <img src="b1.png" alt="Yochai Benkler" />
       <div class="speaker-info">
         <h3>Yochai Benkler</h3>
         <p class="title">Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</p>
@@ -114,7 +114,7 @@
 
     <!-- Speaker 2 -->
     <div class="speaker-card">
-      <img src="Images\speaker 2.png" alt="Kilnam Chon" />
+      <img src="n2.png" alt="managing" />
       <div class="speaker-info">
         <h3>Kilnam Chon</h3>
         <p class="desc">Kilnam Chon helped bring the Internet to Asia and is an advocate for the open web and digital commons...</p>
@@ -123,7 +123,7 @@
 
     <!-- Speaker 3 -->
     <div class="speaker-card">
-      <img src="Images\speaker 3.png" alt="SohYeong Noh" />
+      <img src="b2.png" alt="SohYeong Noh" />
       <div class="speaker-info">
         <h3>SohYeong Noh</h3>
         <p class="title">Director of Art Centre Nabi and board member of CC Korea</p>
@@ -133,7 +133,7 @@
 
     <!-- Speaker 4 -->
     <div class="speaker-card">
-      <img src="Images\speaker 4 (2).png" alt="Julia Leda" />
+      <img src="b3.png" alt="Julia Leda" />
       <div class="speaker-info">
         <h3>Julia Leda</h3>
         <p class="title">President of Young Pirates of Europe</p>
@@ -143,7 +143,7 @@
 
     <!-- Speaker 5 -->
     <div class="speaker-card">
-      <img src="Images\speaker 5.png" alt="Lila Tretikov" />
+      <img src="b4.png" alt="Lila Tretikov" />
       <div class="speaker-info">
         <h3>Lila Tretikov</h3>
         <p class="title">Executive Director of the Wikimedia Foundation</p>
@@ -153,7 +153,7 @@
 
     <!-- Speaker 6 -->
     <div class="speaker-card">
-      <img src="Images\speaker 6.png" alt="Ryan Merkley" />
+      <img src="b5.png" alt="Ryan Merkley" />
       <div class="speaker-info">
         <h3>Ryan Merkley</h3>
         <p class="title">CEO of Creative Commons, ex COO of the Mozilla Foundation</p>
